Add data dir and move all json files to that dir

--- a/data.qrc
+++ b/data.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/data"/>
     <qresource prefix="/">
-        <file>keyboard_data_english.json</file>
-        <file>keyboard_data_arabic.json</file>
-        <file>keyboard_data_japanese.json</file>
-        <file>keyboard_data_german.json</file>
-        <file>languages_data.json</file>
+        <file>data/keyboard_data_arabic.json</file>
+        <file>data/keyboard_data_english.json</file>
+        <file>data/keyboard_data_german.json</file>
+        <file>data/keyboard_data_japanese.json</file>
+        <file>data/languages_data.json</file>
     </qresource>
 </RCC>
